--- a/src/reset.css
+++ b/src/reset.css
@@ -168,6 +168,7 @@
     margin: 0;
     min-height: 100vh;
     line-height: var(--font-family-base-line-height);
+    color: var(--text-color);
   }
 
   h1,
