--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,12 @@
   display: flex;
   width: 100%;
 }
+
+.shopify {
+  background-image: url(https://819835.apps.zdusercontent.com/819835/assets/1707464129-4e56f77cdbf4d416015fc01216d6b0e0/icons/shopify-brands.svg);
+  height: 20px;
+  width: 20px;
+  background-repeat: no-repeat;
+  filter: invert(80%) sepia(4%) saturate(7125%) hue-rotate(33deg) brightness(89%) contrast(86%);
+  margin-left: 10px;
+}
