--- a/src/components/AppInfoBar/AppInfoBar.css
+++ b/src/components/AppInfoBar/AppInfoBar.css
@@ -24,6 +24,17 @@
   align-items: center;
   gap: 0.5rem;
   line-height: 1;
+  margin-bottom: 0.5rem;
+}
+
+.algolia-perso-indicator {
+  display: flex;
+  justify-content: space-evenly;
+  color: #005e36;
+  background-color: rgba(13,229,137,0.4);
+  border-radius: 1.5rem;
+  font-weight: bold;
+  margin-inline-start: 1.25rem;
 }
 
 .algolia-org-info {
@@ -52,4 +63,34 @@
 
 .algolia-user-info a:hover {
   text-decoration: underline;
+}
+
+.algolia-user-info-list {
+  list-style: disc;
+  padding-inline-start: 40px;
+}
+
+.algolia-applications-list {
+  gap:
+}
+
+.algolia-applications-list a {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: white;
+  font-weight: 700;
+  width: min-content;
+}
+
+.algolia-applications-list a:hover li {
+  background-color: #b80979;
+}
+
+.algolia-applications-list li {
+  background-color: #f86e7e;
+  padding: 0 0.3rem;
+  border-radius: 4px;
+  line-height: 1.25;
+  margin: 0.2rem 0;
 }
