--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 @import "./components/Header/QuestionPicker/QuestionPicker.css";
 @import "./components/SideBar/SideBar.css";
 @import "./components/AppInfoBar/AppInfoBar.css";
+@import "./components/CentralTextArea/CentralTextArea.css";
 
 :root {
   --ticket-border-color: rgb(216,220,222);
