--- a/src/components/CentralTextArea/CentralTextArea.css
+++ b/src/components/CentralTextArea/CentralTextArea.css
@@ -1,3 +1,17 @@
 .text-area-structure {
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.text-area-container {
+  flex-grow: 1;
+}
+
+.text-area-reply {
+  width: 100%;
+}
+
+.text-area-reply * {
+  width: 100%;
 }
