--- a/src/components/CentralTextArea/RenderMessage/RenderMessage.css
+++ b/src/components/CentralTextArea/RenderMessage/RenderMessage.css
@@ -1,20 +1,57 @@
-.message-layout-grid {
-  display: grid;
-  grid-template-rows: auto 1fr;
-  grid-template-columns: 5rem 1fr 2.5rem;
-  grid-template-areas: "avatar header menu" "avatar text menu";
-  margin-block: 0.75rem;
+.message-layout {
+  display: flex;
+  flex-direction: column;
+  margin-right: 2.5rem;
+  margin-block: 1rem;
+  gap: 0.75rem;
+}
+
+.message-header {
+  display: flex;
+  align-items: flex-start;
 
 }
 
 .message-avatar {
-  grid-area: avatar;
+  width: 2.5rem;
+  aspect-ratio: 1;
+  margin-inline: 1.25rem;
+  border-radius: 50%;
 }
 
-.message-sender-info {
-  grid-area: header;
+.customer-avatar {
+  background-color: red;
+}
+
+.support-avatar {
+  background-color: blue;
+}
+
+.message-sender-name {
+  font-weight: 600;
+}
+
+.message-recipient {
+  font-size: 0.75rem;
+  display: flex;
+  gap: 0.25rem;
+}
+
+.message-recipient-name {
+  color: var(--ticket-faded-text);
 }
 
 .message-body {
-  grid-area: text;
+  margin-left: 5rem;
+  padding: 0.75rem;
+  border-radius: 0.25rem;
+  max-width: 100ch;
+}
+
+.customer-message {
+  background-color: bisque;
+}
+
+.support-message {
+  background-color: aquamarine;
 }
