--- a/src/components/CentralTextArea/RenderMessage/RenderMessage.css
+++ b/src/components/CentralTextArea/RenderMessage/RenderMessage.css
@@ -20,11 +20,32 @@
 }
 
 .customer-avatar {
-  background-color: red;
+  background-color: rgb(218, 237, 237);
+}
+
+.customer-avatar > svg {
+  color:rgb(73, 130, 131)
 }
 
 .support-avatar {
-  background-color: blue;
+  background-color: rgb(47, 57, 65);
+}
+
+.support-avatar > svg {
+  color: rgb(233, 235, 237);
+}
+
+.support-avatar-subicon {
+  box-sizing: border-box;
+  padding: 1px;
+  display: inline;
+  position: absolute;
+  border-radius: 50%;
+  border: 1px solid rgb(47, 57, 65);
+  color: rgb(47, 57, 65);
+  background-color: rgb(233, 235, 237);
+  width: 18px;
+  height: 18px;
 }
 
 .message-sender-name {
@@ -49,9 +70,9 @@
 }
 
 .customer-message {
-  background-color: bisque;
+  background-color: rgb(235, 249, 249);
 }
 
 .support-message {
-  background-color: aquamarine;
+  background-color: rgb(248, 249, 249);
 }
