--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -1,17 +1,21 @@
-.side-bar-container {
+.side-bar-container  {
   width: 25%;
   max-width: 300px;
-  padding: 1rem;
   display: flex;
   flex-direction: column;
   border-right: solid 1px var(--ticket-border-color);
   height: calc(100svh - ((32px*1.15) + 2rem));
 }
+.side-bar-container label {
+  font-weight: 700;
+  font-size: 12px;
+}
 
 .app-info {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
+  padding: 1rem;
 }
 
 .app-info > * {
@@ -20,16 +24,32 @@
   gap: 0.5rem;
 }
 
-.app-info label {
-  font-weight: 700;
-  font-size: 12px;
-}
-
 .app-info textarea {
   height: 3lh;
   min-height: 0;
   resize: none;
   border: 1px solid var(--ticket-border-color);
-  border-radius: 4px;
-  padding: 5px;
+  border-radius: 0.25rem;
+  padding: 0.25rem;
 }
+
+.app-involved-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  border-bottom: 1px solid var(--ticket-border-color);
+  padding: 1rem;
+}
+
+.app-involved-container > div {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+}
+
+.app-involved-container > div > select {
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.25rem;
+  border: 1px solid var(--ticket-border-color);
+}
+
