--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,15 @@
 .page-layout {
   width: 100%;
   height: 100svh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .ticket-layout {
   display: flex;
   width: 100%;
+  flex-grow: 1;
 }
 
 .shopify {
