--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,12 @@
 @import "./components/AppInfoBar/AppInfoBar.css";
 @import "./components/CentralTextArea/CentralTextArea.css";
 @import "./components/CentralTextArea/RenderMessage/RenderMessage.css";
+@import "./components/Footer/Footer.css";
 
 :root {
   --ticket-border-color: rgb(216,220,222);
   --ticket-bg: #f8f9f9;
   --ticket-faded-text: #68737D;
   --text-color: rgb(47,57,65);
+  --algolia-blue: #003dff
 }
