--- a/src/components/CentralTextArea/RenderMessage/RenderMessage.css
+++ b/src/components/CentralTextArea/RenderMessage/RenderMessage.css
@@ -68,6 +68,23 @@
   gap: 0.25rem;
 }
 
+.message-internal-icon {
+  display: inline-flex;
+  flex-wrap: nowrap;
+  -webkit-box-align: center;
+  align-items: center;
+  vertical-align: middle;
+  font-weight: 600;
+  border-radius: 2px;
+  padding: 0 0.25rem;
+  height: 1rem;
+  line-height: 1.6;
+  font-size: 10px;
+  background-color: rgb(255, 176, 87);
+  color: rgb(112, 56, 21);
+  margin-right: 0.5rem;
+}
+
 .message-recipient-name {
   color: var(--ticket-faded-text);
 }
@@ -85,4 +102,9 @@
 
 .support-message {
   background-color: rgb(248, 249, 249);
+}
+
+.internal-note {
+  background-color: var(--internal-note);
+  border: 1px solid var(--internal-note-border);
 }
