--- a/src/index.css
+++ b/src/index.css
@@ -12,5 +12,7 @@
   --ticket-bg: #f8f9f9;
   --ticket-faded-text: #68737D;
   --text-color: rgb(47,57,65);
-  --algolia-blue: #003dff
+  --algolia-blue: #003dff;
+  --internal-note: rgb(255, 247, 237);
+  --internal-note-border: rgb(254, 214, 168);
 }
