--- a/src/components/CentralTextArea/CentralTextArea.css
+++ b/src/components/CentralTextArea/CentralTextArea.css
@@ -2,11 +2,13 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+  height: calc(100svh - (49px + 63px));
 }
+
 
 .text-area-container {
   flex-grow: 1;
-  overflow: auto;
+  overflow-y: auto;
   position: relative;
 }
 .text-area-header {
